Home Page Start

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,1 +1,8 @@
-@import '~tailwind-sass';
+// Variables
+@import 'variables/colors';
+
+// App Layout
+@import 'layout/layout';
+
+// Components
+@import 'components/card'
